[package]
name = "donut"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
donut-core = { path = "crates/donut-core" }
donut-layout = { path = "crates/donut-layout" }
donut-util = { path = "crates/donut-util" }
donut-renderer = { path = "crates/donut-renderer" }

[dependencies.web-sys]
version = "0.3.82"
features = ["console", "CanvasRenderingContext2d", "Document", "Window", "HtmlCanvasElement", "MouseEvent", "KeyboardEvent"]
